# lockfile-test

./: .gitignore  README.md  pixi.toml  test_lockfile.py
pixi-global/envs/pixi-package/conda-meta/: _libgcc_mutex-0.1-conda_forge.json  _openmp_mutex-4.5-2_gnu.json  bzip2-1.0.8-hda65f42_8.json  ca-certificates-2025.11.12-hbd8a1cb_0.json  ld_impl_linux-64-2.45-default_hbd61a6d_104.json  libexpat-2.7.3-hecca717_0.json  libffi-3.5.2-h9ec8514_0.json  libgcc-15.2.0-he0feb66_14.json  libgomp-15.2.0-he0feb66_14.json  liblzma-5.8.1-hb9d3cd8_2.json  libmpdec-4.0.0-hb9d3cd8_0.json  libsqlite-3.51.1-h0c1763c_0.json  libuuid-2.41.2-he9a06e4_0.json  libzlib-1.3.1-hb9d3cd8_2.json  ncurses-6.5-h2d0b736_3.json  openssl-3.6.0-h26f9b46_0.json  pixi-package-0.1.0-pyh4616a5c_0.json  python-3.14.0-h32b2ec7_102_cp314.json  python_abi-3.14-8_cp314.json  readline-8.2-h8c095d6_2.json  tk-8.6.13-noxft_ha0e22de_103.json  tzdata-2025b-h78e105d_0.json  zstd-1.5.7-h3691f8a_5.json
pixi-global/envs/pixi-package/lib/: libatomic.so.1.2.0  libgcc_s.so.1  libgomp.so.1.0.0  libitm.so.1.0.0  libquadmath.so.0.0.0  libsqlite3.so.3.51.1  libtinfo.so.6.5  libtinfow.so.6.5  libuuid.so.1.3.0  libzstd.so.1.5.7  tclConfig.sh  tkConfig.sh
pixi-global/envs/pixi-package/lib/itcl4.2.3/: itclConfig.sh
pixi-global/envs/pixi-package/lib/pkgconfig/: form.pc  formw.pc  history.pc  libcrypto.pc  libffi.pc  libssl.pc  libzstd.pc  menu.pc  menuw.pc  ncurses++.pc  ncurses++w.pc  ncurses.pc  ncursesw.pc  openssl.pc  panel.pc  panelw.pc  python-3.14.pc  (+8 more)
pixi-global/manifests/: pixi-global.toml
pixi-package/: pyproject.toml
(+159 files in other folders)
