[project]
authors = [{name = "Julian Hofer", email = "julianhofer@gnome.org"}]
dependencies = []
name = "pixi-package"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.pixi.package]
name = "pixi-package"
version = "0.1.0"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"

[tool.pixi.package.host-dependencies]
hatchling = "*"